# ScalarForensic

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.amd.yml  docker-compose.nvidia.yml  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
data/: hash_cache.db
docs/: benchmark-session-2026-04-09.md  concept-triage-plan.md  concept-triage.md  kde-wallpaper-screensaver.md  normalization.md  performance.md  project-structure.md  similarity-math.md  tag-triage.md
docs/advisory/: 2026-04-07-strategic-advisory.md
docs/research/: Architektur.md  audio-profiling-evaluation.md  file-dedup-evaluation.md  person-reid-evaluation.md  person-reid-evaluation_reevaluation.md  scene-matching-evaluation.md  vector-db-evaluation.md
scripts/: build_airgap_image.sh  download_deps.sh  download_models.py  export_reference_collection.py  remap_paths.py
src/scalar_forensic/: __init__.py  _model_hash.py  calibration.py  cli.py  concepts.py  config.py  discovery.py  embedder.py  extractor.py  indexer.py  query_eval.py  safeguards.py  scanner.py  tags.py  triage_cli.py  video.py
src/scalar_forensic/web/: app.py  pipeline.py  session.py
src/scalar_forensic/web/static/: index.html  style.css  viz.js
test/: download_data.sh  prepare_searchfiles.py
tests/: test_cli_reference_guard.py  test_concepts.py  test_container_endpoints.py  test_discovery.py  test_embedder_preprocessing.py  test_get_available_modes.py  test_hash_cache.py  test_include_reference.py  test_mode_independence.py  test_placeholder.py  test_preprocessed_endpoints.py  test_query_eval.py  test_query_provenance.py  test_safeguards.py  test_session.py  test_tag_endpoints.py  test_tags.py  test_video_endpoints.py  test_video_extraction.py  test_video_pipeline.py  test_viz_endpoint.py  test_web_compat_check.py
