[project]
name = "scalar-forensic"
version = "0.1.0"
description = "A PoC for creating a large-scale vector database from images"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "typer>=0.12",
    "qdrant-client>=1.9",
    "torch>=2.2",
    "torchvision>=0.15",
    "transformers>=4.40",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.scripts]
sfn = "scalar_forensic.cli:main"
sfn-web = "scalar_forensic.web.app:start"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]
heif = [
    "pillow-heif>=0.13",
]
web = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

# NVIDIA CUDA (default)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# AMD ROCm — the version must match what your GPU hardware supports.
# Check with: rocm-smi --showdriverversion
# Available wheel versions: https://download.pytorch.org/whl/torch/
# Replace X.Y below with your ROCm version, then change the index name in
# [tool.uv.sources] to match and run:
#   uv sync --reinstall-package torch --reinstall-package torchvision
# rocm7.2 is the newest index (torch 2.11.0); older cards may need rocm6.x or earlier.
[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scalar_forensic"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scalar_forensic --cov-report=term-missing"
