[project]
name = "scalar-forensic"
version = "0.1.0"
description = "A PoC for creating a large-scale vector database from images"
readme = "README.md"
requires-python = "==3.12.*"
license = { file = "LICENSE" }
dependencies = [
    "typer>=0.12",
    "qdrant-client>=1.9",
    "torch>=2.2",
    "torchvision>=0.15",
    "transformers>=4.40",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    # PyTorch ships this with a plain linux_x86_64 wheel tag (not manylinux), so
    # uv's index resolver rejects it as platform-incompatible.  Pin it as a direct
    # dependency with a URL source so uv installs it without tag validation.
    "pytorch-triton-rocm==3.5.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project.scripts]
sfn = "scalar_forensic.cli:main"
sfn-web = "scalar_forensic.web.app:start"

[dependency-groups]
dev = [
    { include-group = "web" },
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "httpx>=0.27",
]
heif = [
    "pillow-heif>=0.13",
]
web = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

# --- PyTorch backend selection ---
# Uncomment ONE of the index blocks below and update [tool.uv.sources] to match.
# See README § "GPU / hardware acceleration" for full switching instructions.

# NVIDIA CUDA
#[[tool.uv.index]]
#name = "pytorch-cu128"
#url = "https://download.pytorch.org/whl/cu128"
#explicit = true

# AMD ROCm 6.4 (active) — torch 2.9.1, supports gfx1201 (RDNA 4) natively.
# Other available ROCm indexes: rocm6.2, rocm6.3, rocm7.2 (torch 2.11).
# To switch: change the URL and name here, update [tool.uv.sources] below, and
# update the pytorch-triton-rocm pin in [project.dependencies] + the direct URL
# in [tool.uv.sources].  Then run:
#   uv sync --reinstall-package torch --reinstall-package torchvision \
#            --reinstall-package pytorch-triton-rocm
[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-rocm64" }]
torchvision = [{ index = "pytorch-rocm64" }]
# pytorch-triton-rocm is a transitive dependency of torch.  PyTorch ships it
# with a plain linux_x86_64 wheel tag (not manylinux), which uv's index resolver
# rejects as platform-incompatible.  Pinning it as a direct project dependency
# with a hard-coded CDN URL tells uv to install the wheel without tag checks.
# The matching pin in [project.dependencies] is what makes this source entry
# apply (uv only honours [tool.uv.sources] for direct project dependencies).
# When upgrading torch, check the new triton-rocm version in the torch wheel
# metadata and update both the version pin below and the URL here.
pytorch-triton-rocm = [
    { url = "https://download-r2.pytorch.org/whl/pytorch_triton_rocm-3.5.1-cp312-cp312-linux_x86_64.whl", marker = "python_version == '3.12' and platform_machine == 'x86_64' and sys_platform == 'linux'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scalar_forensic"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scalar_forensic --cov-report=term-missing"
